--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,43 +1,33 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap:100,200,300,400,500,600,700');
 @import url('https://fonts.googleapis.com/css?family=Zeyada&display=swap:100,200,300,400,500,600,700');
 
-
-
-/**{
-    margin:0;
-    padding: 0;
-    border: 0;
-}*/
-
 body{
     display: block;
-    height: 100%;
     font-family: "Montserrat", sans-serif;
     font-size: 20px;
     color: 	#303030;
-    margin: 30px;
-    
+    background: url("../images/background-image.png") ;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100vh;
+    height: 100vh;
+    overflow: hidden;
 }
 
-/*-------------------------------------------------------------------Header*/
+/*------------------------------------------------------------------Header*/
 
 header {
     width: 100%;
     text-align: center;
 }
 
-h1{
+#logo{
     font-family: "Zeyada";
     text-transform: uppercase;
-    
     letter-spacing: 2px;
     color: #303030;
-}
-
-#logo{
     float: left;
     font-size: 350%;
-    
     padding-top: 50px;
     padding-left: 50px;
 }
@@ -50,7 +40,6 @@ h1{
     padding: 100;
     text-align: center;
     position: relative;
-    
 }
 
 #logo, #header-menu{
@@ -75,29 +64,42 @@ h1{
 
 /*-------------------------------------------------------------------Background-Image*/
 
-#background-image{
-    height: 150px;
-    width: 100%;
+/*#background-image{
+    height: 100%;
     position: center;
     background: url("../images/background-image.png") no-repeat center center;
-}
+    background-size: cover;
+    padding: 15% 50%;
+}*/
 
 /*-------------------------------------------------------------------Footer*/
+
+.footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 200px;
+    text-align: center;
+}
 
 .social-networks{
     text-align: center;
 }
 
 .social-networks li{
-    display: inline;
+    display: inline-block;
 }
 
 .social-networks i{
     font-size: 160%;
-    margin: 1%;
     padding: 5%;
     color: #303030;
+    margin: 0 10px 0 0;
 }
 
-/*-------------------------------------------------------------------Container*/
+/*-------------------------------------------------------------------container*/
 
+h1{
+    text-align: center;
+}
