--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 
 /* div{
     border: solid 1px black;
-} */
+}   */
 
 body{
     display: block;
@@ -28,7 +28,7 @@ body{
      font-size: 30px;
 }
 
-/*-------------------------------------------------------------------Footer*/
+/*-------------------------------------------------------------------Landing Image*/
 
 .landing-image{
     background: url("../images/landing-image.png");
@@ -37,6 +37,87 @@ body{
     background-size: contain;
     height: 50vh;
 }
+
+/*-------------------------------------------------------------------Job Title*/
+
+.jobtitle{
+    text-align: center;
+    margin-top: 30rem;
+    font-family: "Montserrat", sans-serif ;
+}
+
+/*-------------------------------------------------------------------Contact Form*/
+
+body{
+    background: -webkit-linear-gradient(left,#ffffff);
+}
+.contact-form{
+    background: #fff;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    width: 70%;
+}
+.contact-form .form-control{
+    border-radius:1rem;
+}
+.contact-image{
+    text-align: center;
+}
+.contact-image img{
+    border-radius: 6rem;
+    width: 11%;
+    margin-top: -3%;
+    transform: rotate(29deg);
+}
+.contact-form form{
+    padding: 14%;
+}
+.contact-form form .row{
+    margin-bottom: -7%;
+}
+.contact-form h3{
+    margin-bottom: 8%;
+    margin-top: -10%;
+    text-align: center;
+    color: #303030;
+}
+.contact-form .btnContact {
+    width: 50%;
+    border: none;
+    border-radius: 1rem;
+    padding: 1.5%;
+    background: #303030;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+}
+.btnContactSubmit
+{
+    width: 50%;
+    border-radius: 1rem;
+    padding: 1.5%;
+    color: #fff;
+    background-color: #0062cc;
+    border: none;
+    cursor: pointer;
+}
+
+/* .jumbotron {
+background:#303030;
+color: #FFF;
+border-radius: 0px;
+}
+.jumbotron-sm { padding-top: 24px;
+padding-bottom: 24px; }
+.jumbotron small {
+color: #FFF;
+}
+.h1 small {
+font-size: 24px;
+}
+#btnContactUs{
+    background-color: #303030;
+} */
 
 /*-------------------------------------------------------------------Footer*/
 
@@ -63,9 +144,3 @@ body{
     margin: 0 10px 0 0;
 }
 
-/*-------------------------------------------------------------------Job Title*/
-
-.jobtitle{
-    text-align: center;
-    margin-top: 10rem;
-}
