--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,38 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap:100,200,300,400,500,600,700');
-@import url('https://fonts.googleapis.com/css?family=Zeyada&display=swap:100,200,300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Zeyada&display=swap:100,200,300,400,500,600,700');
 
-div{
+ /* div{
     border: solid 1px black;
-}      
+}        */
 
 body{
-    display: block;
+    position: center;
     font-family: "Montserrat", sans-serif;
     font-size: 20px;
     color: 	#303030;
-    height: 100vh;
-    overflow: hidden;
-    background: -webkit-linear-gradient(left,#ffffff)
+    overflow-x: hidden;
+}
+
+a{
+    color: #303030;
+    text-decoration: none;
+}
+
+a a:hover{
+    color:#303030;
+    text-decoration-line: none;
 }
 
 /*------------------------------------------------------------------Header*/
+
+.navbar{
+    background-color: #909090 !important;
+}
 
 .navbar-brand{
     font-family: "Zeyada", sans-serif;
     font-size: 60px;
     color: #303030;
+    margin-left: 30px;
 }
 
 .nav-link{
@@ -39,6 +51,16 @@ body{
     color: #303030;
 }
 
+@media screen and (max-width: 943px) {
+  /* .navbar{
+    clear: left;
+    float: left;
+    margin-left: 30px;
+    margin-bottom: 20px;
+    line-height: 25px;
+  } */
+}
+
 /*-------------------------------------------------------------------Images*/
 
 .landing-image{
@@ -46,8 +68,8 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-    height: 40vh;
-     max-width: 100%;
+    height: 50vh;
+    max-width: 100%;
 }
 
 .tech-image{
@@ -84,14 +106,19 @@ body{
     height: 30vh;
 }
 
-/*-------------------------------------------------------------------Job Title*/
+/*-------------------------------------------------------------------Landing content*/
+
+#landing-content{
+    margin: 0;
+    font-size: 40px;
+    max-width: 100%;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    text-decoration: none;
+}
 
 .jobtitle{
-    text-align: center;
-    /* margin-top: 30rem; */
-    font-family: "Montserrat", sans-serif ;
-    color: #303030;
-    text-decoration: none;
+    display: inline;
 }
 
 .jobtitle a:hover{
@@ -161,12 +188,11 @@ body{
 /*-------------------------------------------------------------------Footer*/
 
 .footer{
-    position: fixed;
-    left: 0;
-    bottom: 0;
     width: 100%;
+    /* height: 100px; */
+    padding: 20px;
     text-align: center;
-    background-color: #C7BFBF;
+    background-color: #909090;
 }
 
 .download p, a{
@@ -187,4 +213,11 @@ body{
     padding: 5%;
     color: #303030;
     margin: 0 10px 0 0;
+} 
+
+@media only screen and (max-width: 1393px) {
+  #landing-content {
+    width: 50%;
+    margin: 0 auto;
+  }
 }
