--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Zeyada&display=swap:100,200,300,400,500,600,700');
 
- /* div{
+div{
     border: solid 1px black;
-}        */
+}        
 
 body{
     position: center;
@@ -116,13 +116,36 @@ a a:hover{
     font-family: "Montserrat", sans-serif;
     text-decoration: none;
 }
-
+/* 
 .jobtitle{
     display: inline;
 }
 
 .jobtitle a:hover{
     color: #303030;
+} */
+
+.typewriter h1 {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation: 
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
 }
 
 /*-------------------------------------------------------------------Contact Form*/
