--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat|Zeyada&display=swap:100,200,300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Zeyada|Press+Start+2P&display=swap:100,200,300,400,500,600,700');
+/* @import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap'); */
 
-div{
+/* div{
     border: solid 1px black;
-}        
+}          */
 
 body{
     position: center;
@@ -22,7 +23,7 @@ a a:hover{
     text-decoration-line: none;
 }
 
-/*------------------------------------------------------------------Header*/
+/*------------------------------------------------------------------HEADER*/
 
 .navbar{
     background-color: #909090 !important;
@@ -61,7 +62,7 @@ a a:hover{
   } */
 }
 
-/*-------------------------------------------------------------------Images*/
+/*-------------------------------------------------------------------IMAGES*/
 
 .landing-image{
     background: url("../images/landing-image.png");
@@ -106,34 +107,33 @@ a a:hover{
     height: 30vh;
 }
 
-/*-------------------------------------------------------------------Landing content*/
-
-#landing-content{
-    margin: 0;
-    font-size: 40px;
-    max-width: 100%;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    text-decoration: none;
-}
-/* 
-.jobtitle{
-    display: inline;
-}
-
-.jobtitle a:hover{
-    color: #303030;
-} */
+/*-------------------------------------------------------------------TYPEWRITER*/
 
 .typewriter h1 {
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: .15em solid orange; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  /* margin: 0 auto; Gives that scrolling effect as the typing happens */
   letter-spacing: .15em; /* Adjust as needed */
   animation: 
     typing 3.5s steps(40, end),
     blink-caret .75s step-end infinite;
+}
+
+.typewriter h1 {
+  position: relative;
+  font-family: "Press+Start+2P";
+  border-right: .15em solid black; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  /* margin: 0 auto; Gives that scrolling effect as the typing happens */
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 10px 0 10px;
+  letter-spacing: .20em; /* Adjust as needed */
+  animation: 
+    typing 10s steps(56,end) 1s 1 normal both, 
+    blink-caret .75s steps(56,end) infinite;
+  animation-iteration-count: infinite;
 }
 
 /* The typing effect */
@@ -142,10 +142,20 @@ a a:hover{
   to { width: 100% }
 }
 
+@keyframes typing {
+  from { width: 0 }
+  to { width: 75% }
+}
+
 /* The typewriter cursor effect */
 @keyframes blink-caret {
   from, to { border-color: transparent }
   50% { border-color: orange; }
+}
+
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+  50% { border-color: black; }
 }
 
 /*-------------------------------------------------------------------Contact Form*/
@@ -211,8 +221,9 @@ a a:hover{
 /*-------------------------------------------------------------------Footer*/
 
 .footer{
+    position: absolute;
+    bottom: 0;
     width: 100%;
-    /* height: 100px; */
     padding: 20px;
     text-align: center;
     background-color: #909090;
@@ -238,9 +249,20 @@ a a:hover{
     margin: 0 10px 0 0;
 } 
 
-@media only screen and (max-width: 1393px) {
-  #landing-content {
-    width: 50%;
+/*-------------------------------------------------------------------MEDIA QUERIES*/
+
+@media screen and (max-width: 943px) {
+  .typewriter{
+    float: none;
+    background-color: blue;
     margin: 0 auto;
   }
+  .typewriter h1{
+    font-size: 5vh;
+   }
+
+   .footer{
+       float: center;
+       clear: center;
+   }
 }
