--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,8 @@
 }          */
 
 body{
-    position: center;
     font-family: "Montserrat", sans-serif;
-    font-size: 20px;
+    font-size: 1rem;
     color: 	#303030;
     overflow-x: hidden;
 }
@@ -31,7 +30,7 @@ a a:hover{
 
 .navbar-brand{
     font-family: "Zeyada", sans-serif;
-    font-size: 60px;
+    font-size: 5rem;
     color: #303030;
     margin-left: 30px;
 }
@@ -50,16 +49,6 @@ a a:hover{
 .navbar-nav a:hover{
     border-bottom: 1px solid #303030;
     color: #303030;
-}
-
-@media screen and (max-width: 943px) {
-  /* .navbar{
-    clear: left;
-    float: left;
-    margin-left: 30px;
-    margin-bottom: 20px;
-    line-height: 25px;
-  } */
 }
 
 /*-------------------------------------------------------------------IMAGES*/
@@ -122,7 +111,7 @@ a a:hover{
 
 .typewriter h1 {
   position: relative;
-  font-family: "Press+Start+2P";
+  font-family: "Press+Start+2P" !important;
   border-right: .15em solid black; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   /* margin: 0 auto; Gives that scrolling effect as the typing happens */
@@ -229,6 +218,10 @@ a a:hover{
     background-color: #909090;
 }
 
+.footer-item{
+
+}
+
 .download p, a{
     display: inline;
     color: #303030;
@@ -262,7 +255,7 @@ a a:hover{
    }
 
    .footer{
-       float: center;
-       clear: center;
+       float: ;
+       clear: ;
    }
 }
