--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,9 +227,20 @@ a a:hover{
 
 /*-------------------------------------------------------------------Footer*/
 
+.footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #343a40;
+}
 
-
-
+.footer container-fluid{
+    width: auto;
+    max-width: 680px;
+    padding: 0 15px;
+}
 
 
 
@@ -268,7 +279,7 @@ a a:hover{
     padding: 5%;
     color: #303030;
     margin: 0 10px 0 0;
-}  */
+}   */
 
 /*-------------------------------------------------------------------MEDIA QUERIES*/
 
