--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Zeyada|Press+Start+2P&display=swap:100,200,300,400,500,600,700');
 /* @import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap'); */
 
-div{
+/* div{
     border: solid 1px black;
-}  
+}   */
 
 html, body {
   height: 100%;
@@ -31,7 +31,6 @@ a a:hover{
 /*------------------------------------------------------------------HEADER*/
 
 .navbar{
-    /* background-color: #909090 !important; */
     font-size: 2rem;
     position: fixed;
     z-index: 100;
@@ -113,11 +112,11 @@ a a:hover{
 }
 
 /*-------------------------------------------------------------------TYPEWRITER*/
-.content {
+.content{
   flex: 1 0 auto;
 }
 
-.typewriter h1 {
+.typewriter h1{
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: .15em solid orange; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
@@ -128,7 +127,7 @@ a a:hover{
     blink-caret .75s step-end infinite;
 }
 
-.typewriter h1 {
+.typewriter h1{
   position: relative;
   font-family: "Press+Start+2P" !important;
   border-right: .15em solid black; /* The typwriter cursor */
@@ -145,30 +144,38 @@ a a:hover{
 }
 
 /* The typing effect */
-@keyframes typing {
+@keyframes typing{
   from { width: 0 }
   to { width: 100% }
 }
 
-@keyframes typing {
+@keyframes typing{
   from { width: 0 }
   to { width: 75% }
 }
 
 /* The typewriter cursor effect */
-@keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% { border-color: orange; }
+@keyframes blink-caret{
+  from, to { border-color: transparent}
+  50% { border-color: orange;}
 }
 
-@keyframes blink-caret {
-    from, to { border-color: transparent }
-  50% { border-color: black; }
+@keyframes blink-caret{
+    from, to { border-color: transparent}
+  50% { border-color: black;}
 }
 
 /*-------------------------------------------------------------------Footer*/
 
-.footer{
+#sticky-footer {
+  flex-shrink: none;
+}
+
+.download a{
+    color: #fff;
+}
+
+/* .footer{
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -181,9 +188,9 @@ a a:hover{
     width: auto;
     max-width: 680px;
     padding: 0 15px;
-}
+} */
 
-
+/*-------------------------------*/
 
 /* .footer{
     margin-top: 30px;
