--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Zeyada|Press+Start+2P&display=swap:100,200,300,400,500,600,700');
 /* @import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap'); */
 
-/* div{
+div{
     border: solid 1px black;
-}   */
+}  
 
 html, body {
   height: 100%;
@@ -165,7 +165,13 @@ a a:hover{
   50% { border-color: black;}
 }
 
-/*-------------------------------------------------------------------Footer*/
+/*-------------------------------------------------------------------CONTACT FORM*/
+
+#contact{
+    padding-top:  0;
+}
+
+/*-------------------------------------------------------------------------FOOTER*/
 
 #sticky-footer {
   flex-shrink: none;
@@ -175,63 +181,9 @@ a a:hover{
     color: #fff;
 }
 
-/* .footer{
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
-    background-color: #343a40;
-}
-
-.footer container-fluid{
-    width: auto;
-    max-width: 680px;
-    padding: 0 15px;
-} */
-
-/*-------------------------------*/
-
-/* .footer{
-    margin-top: 30px;
-    bottom: 0;
-    width: 100%;
-    padding: 5%;
-    text-align: center;
-    background-color: #343a40;
-    flex-shrink: 0;
-   
-}
-
-.footer-item a i{
-    font-size: 2vh;
-    color: #ffffff;
-    display: inline;
-}
-
-.download p, a{
-    display: inline;
-     color: #ffffff;
-      font-size: 1rem;
-}
-
-  .social-networks{
-    text-align: center;
-} 
-
-.footer-item li{
-    display: inline-block;
-}
-
-.footer-item i{
-    padding: 5%;
-    color: #303030;
-    margin: 0 10px 0 0;
-}   */
-
 /*-------------------------------------------------------------------MEDIA QUERIES*/
 
-@media screen and (max-width: 943px) {
+@media screen and (max-width: 320px) {
   .typewriter{
     float: none;
     /* background-color: blue; */
@@ -242,6 +194,11 @@ a a:hover{
    }
 }
 
-@media screen and (min-width: 0px) and (max-width: 720px) {
+/* @media screen and (min-width: 0px) and (max-width: 20px) {
   .social-networks { display: none; }
- }
+ } */
+
+ @media screen and (min-width: 0px) and (max-width: 568px) {
+  .navbar-brand { display: none; }
+  .copy-right{ display: none; }
+}
