--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Zeyada|Press+Start+2P&display=swap:100,200,300,400,500,600,700');
 
-/* div{
+div{
     border: solid 1px black;
-}   */
+}  
 
 html, body {
   height: 100%;
