--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Zeyada|Press+Start+2P&display=swap:100,200,300,400,500,600,700');
 
-/* div{
+div{
     border: solid 1px black;
-}   */
+}
 
 html, body {
   height: 100%;
@@ -126,11 +126,27 @@ a a:hover{
     background-color: gray;
 }
 
-.cards{
+.btn-primary:active {
+  background-color: yellow;
+}
+
+.cards-agile{
     margin-bottom: 106px;
 }
 
+.cards-softskills{
+    margin-bottom: 130px;
+}
 
+/*-------------------------------------------------------------------CARDS*/
+
+.progress{
+    background-color: yellow;
+}
+
+.progress-bar{
+    background-color: red;
+}
 /*-------------------------------------------------------------------TYPEWRITER*/
 .content{
   flex: 1 0 auto;
