--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Zeyada|Press+Start+2P&display=swap:100,200,300,400,500,600,700');
 
-div{
+/* div{
     border: solid 1px black;
-}
+} */
 
 html, body {
   height: 100%;
@@ -126,10 +126,13 @@ a a:hover{
     background-color: gray;
 }
 
-.btn-primary:active {
+.btn-primary:active:focus {
   background-color: yellow;
 }
 
+.cards-tech{
+    margin-bottom: 20px;
+}
 .cards-agile{
     margin-bottom: 106px;
 }
@@ -138,14 +141,18 @@ a a:hover{
     margin-bottom: 130px;
 }
 
-/*-------------------------------------------------------------------CARDS*/
-
+/*-------------------------------------------------------------------PROGRESS SKILLS*/
+.progress-skills{
+    margin-bottom: 20px;
+}
 .progress{
-    background-color: yellow;
+    background-color: grey;
+    height: 2rem;
+    margin-bottom: 10px;
 }
 
 .progress-bar{
-    background-color: red;
+    background-color: darkgray;
 }
 /*-------------------------------------------------------------------TYPEWRITER*/
 .content{
