--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,14 +52,17 @@ a a:hover{
     margin-right: 50px;
 }
 
-.navbar-brand a:hover{
-    color:red;
+a.navbar-brand:hover{
+    color:red !important;
 }
 
 .navbar-nav a:hover{
     border-bottom: 1px solid #303030;
-    color: #303030;
+    color: red;
 }
+.navbar-toggler-icon{
+    margin-left: auto;
+    }
 
 /*-------------------------------------------------------------------IMAGES*/
 
@@ -72,7 +75,7 @@ a a:hover{
     max-width: 100%;
     margin-top: 180px;
     /* z-index:-1; */
-}
+ } 
 
 .tech-image{
     background: url("../images/tech-image.png");
@@ -115,6 +118,16 @@ a a:hover{
     margin-top: 100px;
 }
 
+/*-------------------------------------------------------------------PRESONAL INFO*/
+
+.personal-info{
+    font-family: 'Press Start 2P';
+    height: 50vh;
+    max-width: 100%;
+    margin-top: auto;
+    padding-top: 100px; 
+}
+
 /*-------------------------------------------------------------------CARDS*/
 .btn-primary{
     background-color: #343a40;
@@ -131,14 +144,14 @@ a a:hover{
 }
 
 .cards-tech{
-    margin-bottom: 20px;
+    margin-bottom: 53px;
 }
 .cards-agile{
-    margin-bottom: 106px;
+    margin-bottom: 139px;
 }
 
 .cards-softskills{
-    margin-bottom: 130px;
+    margin-bottom: 163px;
 }
 
 /*-------------------------------------------------------------------PROGRESS SKILLS*/
@@ -168,16 +181,6 @@ a a:hover{
 
 .typewriter h1{
   overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid orange; /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  /* margin: 0 auto; Gives that scrolling effect as the typing happens */
-  letter-spacing: .15em; /* Adjust as needed */
-  animation: 
-    typing 3.5s steps(40, end),
-    blink-caret .75s step-end infinite;
-}
-
-.typewriter h1{
   position: relative;
   font-family: 'Press Start 2P', cursive;
   font-size: 1rem;
@@ -218,15 +221,15 @@ a a:hover{
 
 /*-------------------------------------------------------------------CONTACT FORM*/
 
-#contact{
+/* #contact{
     padding: auto;
     
-}
+} */
 
 /*-------------------------------------------------------------------------FOOTER*/
 
 #sticky-footer {
-  flex-shrink: none;
+  flex-shrink: 0;
 }
 
 .download a{
@@ -248,7 +251,7 @@ a a:hover{
 @keyframes typing{
   from { width: 0 }
   to { width: 100% }
-}
+    }
 }
 
 /* @media screen and (min-width: 0px) and (max-width: 20px) {
@@ -258,10 +261,9 @@ a a:hover{
  @media screen and (min-width: 0px) and (max-width: 568px){
   .navbar-brand { display: none; }
   .copy-right{ display: none; }
+  .navbar-toggler-icon{margin-left: auto;}
 }
 
 @media screen and (min-width:0px) and (max-width: 320px){
-    .navbar-toggler-icon{
-        text-align: left;
+    .navbar-toggler navbar-toggler-icon{margin-left: auto;}
     }
-}
