--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ a a:hover{
 .navbar-brand{
     font-family: "Zeyada", sans-serif;
     font-size: 4rem;
-    margin-left: 5px;
+    margin-left: 40px;
 }
 
 .nav-link{
@@ -53,7 +53,7 @@ a a:hover{
 }
 
 a.navbar-brand:hover{
-    color:red !important;
+    color: grey !important;
 }
 
 .navbar-nav a:hover{
@@ -129,19 +129,15 @@ a.navbar-brand:hover{
 }
 
 /*-------------------------------------------------------------------CARDS*/
-.btn-primary{
-    background-color: #343a40;
-    border: none;
-}
 
-.btn-primary:hover{
+.btn-secondary:hover{
     color: #fff;
     background-color: gray;
 }
 
-.btn.btn-primary:active:focus {
+.btn.btn-secondary:active:focus {
   background-color: red;
-}
+} 
 
 .cards-tech{
     margin-bottom: 53px;
@@ -155,6 +151,7 @@ a.navbar-brand:hover{
 }
 
 /*-------------------------------------------------------------------PROGRESS SKILLS*/
+
 .progress-skills{
     margin-bottom: 48px;
 }
@@ -226,6 +223,15 @@ a.navbar-brand:hover{
     
 } */
 
+.list-inline li i{
+    color: #6c757d;
+    font-size: 1.5rem;
+}
+
+.list-inline li i:hover{
+    color: #303030;
+}
+
 /*-------------------------------------------------------------------------FOOTER*/
 
 #sticky-footer {
@@ -237,7 +243,6 @@ a.navbar-brand:hover{
 }
 
 /*-------------------------------------------------------------------MEDIA QUERIES*/
-
 
 @media screen and (max-width: 320px){
   .typewriter{
