--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,10 +218,11 @@ a.navbar-brand:hover{
 
 /*-------------------------------------------------------------------CONTACT FORM*/
 
-/* #contact{
-    padding: auto;
+#contact{
+    padding: 0px;
+    margin-top: 0px;
     
-} */
+}
 
 .list-inline li i{
     color: #6c757d;
@@ -236,6 +237,7 @@ a.navbar-brand:hover{
 
 #sticky-footer {
   flex-shrink: 0;
+  margin-top: 84px;
 }
 
 .download a{
