--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Zeyada|Press+Start+2P&display=swap:100,200,300,400,500,600,700');
 
-/* div{
+/*div{
     border: solid 1px black;
-} */
+}*/
 
 html, body {
   height: 100%;
@@ -74,15 +74,15 @@ a.navbar-brand:hover{
     background: url("../images/landing-image.png");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: contain;
-    height: 60vh;
+    background-size: cover;
+    height: 30vh;
     max-width: 100%;
-    margin-top: 10rem;
- } 
+    /* margin-top: 10rem; */
+ }
 
 .tech-image{
     background: url("../images/tech-image.png");
-    background-position: right;
+    background-position: left;
     background-repeat: no-repeat;
     background-size: contain; 
     height: 30vh;
@@ -92,7 +92,7 @@ a.navbar-brand:hover{
 
 .backend-image{
     background: url("../images/backend-image.png");
-    background-position: right;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: contain; 
     height: 30vh;
@@ -140,6 +140,10 @@ a.navbar-brand:hover{
     text-align:justify;  
     text-justify:inter-character;
 }
+
+.card{
+    border: none;
+}
 .btn-secondary:hover{
     color: #303030;
     background-color: gray;
@@ -161,22 +165,26 @@ a.navbar-brand:hover{
     margin-bottom: 163px;
 }
 
+/*-------------------------------------------------------------------CARDS LANDING PAGE*/
+
+.card-content-top{
+    margin-top: 8rem;
+    padding-top: 8rem;
+}
+
 /*-------------------------------------------------------------------PROGRESS SKILLS*/
 
-/* 
-// Responsive My Skills Box Widget
-// Made with ❤ by @Pawan_Mall
-// http://www.pawanmall.net 
-*/
-
-/* body { background: #E9E5E2;margin:2%; } */
+/*Responsive My Skills Box Widget
+ Made with ❤ by @Pawan_Mall
+ http://www.pawanmall.net*/
 
  #SkillBox {
     font-size: 10px;
     font-family: 'Montserrat', cursive;
-    width: 95%;
+    width: 100%;
     height: auto;
-    margin: 40px auto;
+   /* margin: 40px auto;*/
+    margin: 0;
     background-color: #fff;
     /* //border: 1px solid #cdcdcd; */
     padding: 10px;
@@ -195,6 +203,7 @@ a.navbar-brand:hover{
     margin: 10px auto;
     border-radius:10px;
 }
+
 #Skill-HTML {
     width: 100%;
     animation: Animate-HTML 4s;
@@ -419,8 +428,10 @@ to {
   border-right: .15em solid black; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   /* margin: 0 auto; Gives that scrolling effect as the typing happens */
-  padding-bottom: 50vh;
-  margin-bottom: 20vh;
+  padding-top: 10vh;
+  margin-top: 5vh;
+  padding-bottom: 10vh;
+  margin-bottom: 10vh;
   margin-left: auto;
   margin-right: auto;
   padding: 0 10px 0 10px;
