--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,8 @@ a.navbar-brand:hover{
     height: auto;
     overflow-y: hidden; 
     overflow-x: hidden;
+    padding-top: 120px;
+    margin-top: -100px;
 } 
 
 #agile{
@@ -127,7 +129,7 @@ a.navbar-brand:hover{
     background-repeat: no-repeat;
     background-size: contain;
     height: 30vh;
-    margin-top: 50px;
+    margin-top: 4rem;
     z-index: -1;
 }
 
@@ -168,6 +170,9 @@ a.navbar-brand:hover{
     margin-bottom: 30px;
 } */
 
+.cards-content{
+    margin-bottom: 3rem;
+}
 /*-------------------------------------------------------------------CARDS LANDING PAGE*/
 
 .landing-content h4{
@@ -306,20 +311,28 @@ a.navbar-brand:hover{
 
 /*-------------------------------------------------------------------CONTACT FORM*/
 
-.form-box h1, .form-box p{
-    position: center;
+.form-box h2, .form-box p{
     text-align: center;
     font-family: inherit;
     font-size: 1.5rem;
 }
 
 .contact-map{
-    position: center;
-    /* padding: 5px; */
-    margin-top: 20px;
     border: #6c757d 1px solid;
     border-radius: 5px;
+    width:100%; 
+    height:400px; 
+    padding: 0;
 }
+
+/*-------------------------------------------------------------------IFRAMES*/
+
+iframe{
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
 
 /*-------------------------------------------------------------------------FOOTER*/
 
@@ -335,6 +348,7 @@ a.navbar-brand:hover{
 
 .download a{
     color: #fff;
+
 }
 
 .list-styled li i{
@@ -400,6 +414,8 @@ a.navbar-brand:hover{
   .copy-right{ display: none; }
   .navbar-toggler-icon{margin-left: auto;}
   .list-inline li i {display: none;}
+  .nav-item{text-align: right;}
+  .navbar-nav{margin-right: 0;}
 }
 
 @media screen and (min-width:0px) and (max-width: 320px){
