maina page buttons fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,6 +193,10 @@ a.navbar-brand:hover{
     color: #303030;
 }
 
+.landing-content p i{
+    color: black;
+}
+
 /*-------------------------------------------------------------------PROGRESS SKILLS*/
 
 .skillbar{
